<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:key="api_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/api_key_pref" />
    <EditTextPreference
        android:key="country_code"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/country_code_pref" />
    <EditTextPreference
        android:key="language_code"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/language_code_pref" />
    <EditTextPreference
        android:key="units"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/units_pref" />

</PreferenceScreen>